tests/fixtures/valid/advanced/types/bool_int_comparisons.py
# Test bool compared with int
print(True == 1)
print(False == 0)
print(True > 0)
print(False < 1)
print(True != 2)
print(False != 1)
print(True >= 1)
print(False <= 0)
