tests/fixtures/invalid/pow_float_list_bool.py
# Cannot call pow() with Float, List[int], Bool
x = pow(1.0, [1, 2, 3], True)
